--- a/pom.xml
+++ b/pom.xml
@@ -205,28 +205,22 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.9.5</version>
         </dependency>
-        <dependency>
+       <!--  <dependency>
 			<groupId>com.baidu.ueditor</groupId>
 			<artifactId>ueditor</artifactId>
 			<version>1.1.2</version>
-		</dependency>
+		</dependency> -->
+		<!-- 分页插件pagehelper -->
+		<!-- <dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>5.1.6</version>
+		</dependency> -->
 	</dependencies>
 	
 	<build>
 		<finalName>yh</finalName>
 		<plugins>
-			<!-- <plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.2.8.v20150217</version>
-				<configuration>
-					<httpConnector>
-						<port>80</port>
-					</httpConnector>
-					<stopKey>shutdown</stopKey>
-					<stopPort>9966</stopPort>
-				</configuration>
-			</plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
