--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,8 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/starpos?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
-username=root
-password=root
+#url=jdbc:mysql://localhost:3306/starpos?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
+url=jdbc:mysql://rm-2ze16t50787kv1727do.mysql.rds.aliyuncs.com:3306/youhu360_dev?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
+username=user_dev
+password=You_Hu_360@dev
 #定义初始连接数  
 initialSize=0  
 #定义最大连接数  
