--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -13,7 +13,7 @@ maxIdle=20
 minIdle=1  
 #定义最长等待时间  
 maxWait=60000  
-uploadImgService.Url=http://127.0.0.1:9092/yh/upload/uploadBlog/
+#uploadImgService.Url=http://127.0.0.1:9092/yh/upload/uploadBlog/
 #viewImgService.Url=http://127.0.0.1:9092/
 #image.Path=upload/image/
 
