图片上传优化；

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -13,13 +13,13 @@ maxIdle=20
 minIdle=1  
 #定义最长等待时间  
 maxWait=60000  
-#uploadImgService.Url=http://127.0.0.1:9092/yh/upload/uploadBlog/
-#viewImgService.Url=http://127.0.0.1:9092/
-#image.Path=upload/image/
 
-#OSS  http://oss-cn-beijing-internal.aliyuncs.com
+#OSS 
 java4all.file.endpoint=oss-cn-beijing.aliyuncs.com
 java4all.file.keyid=LTAIP19n13nqLS4o
 java4all.file.keysecret=NJEpwyUnX84vREvFNwFOIDaButqwWn
 java4all.file.bucketname1=youhu360image
 java4all.file.filehost=blog
+
+
+
